--- a/viewer.html
+++ b/viewer.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>v1 Tischtennis Turnier - Aktueller Stand</title>
+    <title>Tischtennis Turnier - Aktueller Stand</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -127,10 +127,10 @@
 
                         // Initialisiere Team-Statistiken, wenn noch nicht vorhanden
                         if (!teamStats[team1]) {
-                            teamStats[team1] = { wins: 0, losses: 0, scored: 0, conceded: 0 };
+                            teamStats[team1] = { wins: 0, losses: 0, scored: 0, conceded: 0, games: 0 };
                         }
                         if (!teamStats[team2]) {
-                            teamStats[team2] = { wins: 0, losses: 0, scored: 0, conceded: 0 };
+                            teamStats[team2] = { wins: 0, losses: 0, scored: 0, conceded: 0, games: 0 };
                         }
 
                         // Berechnung der Ergebnisse für alle Sätze
@@ -157,6 +157,10 @@
                         teamStats[team2].scored += team2Points;
                         teamStats[team1].conceded += team2Points;
                         teamStats[team2].conceded += team1Points;
+
+                        // Anzahl der absolvierten Spiele erhöhen
+                        teamStats[team1].games += 1;
+                        teamStats[team2].games += 1;
                     });
 
                     // Rangliste sortieren und anzeigen
@@ -164,7 +168,7 @@
                         .map(([team, stats]) => ({
                             team,
                             points: `${stats.wins}:${stats.losses}`,
-                            games: `${stats.wins + stats.losses}`,
+                            games: stats.games,  // Anzahl der Spiele anzeigen
                             diff: stats.scored - stats.conceded, // Differenz berechnen
                             scored: stats.scored,
                             conceded: stats.conceded
@@ -181,7 +185,7 @@
                             <td>${index + 1}</td>
                             <td>${team.team}</td>
                             <td>${team.points}</td>
-                            <td>${team.games}</td>
+                            <td>${team.games}</td> <!-- Spiele hier -->
                             <td>${team.diff}</td> <!-- Differenz hier -->
                             <td>${team.scored}:${team.conceded}</td>
                         `;
