--- a/viewer.html
+++ b/viewer.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>V1.0 Tischtennis Turnier - Aktueller Stand</title>
+    <title>TTT - Aktueller Stand</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -32,7 +32,7 @@
     </style>
 </head>
 <body>
-    <h1>Tischtennis Turnier - Aktueller Stand</h1>
+    <h1>Turbine Tischtennis Turnier</h1>
 
     <h3>Teams:</h3>
     <table id="teamTable">
@@ -65,10 +65,10 @@
             <tr>
                 <th>Platz</th>
                 <th>Teamname</th>
+                 <th>Spiele</th>
                 <th>Punkte</th>
-                <th>Spiele</th>
-                <th>+/-</th>
                 <th>Punkte (Erzielt : Gegen)</th>
+                <th>+/-</th>
             </tr>
         </thead>
         <tbody></tbody>
